--- a/global.css
+++ b/global.css
@@ -5,6 +5,7 @@
 
 :root {
   --overlay-color: #00000088;
+  --background-secondary: #2a2a2a;
   --text-color: #000000;
   --text-color-hover: #444444;
   --text-color-light: #ffffff;
@@ -188,10 +189,59 @@ nav ul li {
 }
 header nav a {
   color: var(--text-color-light);
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 header nav a:hover,
 header nav a:focus {
   color: var(--text-color-hover-light);
+}
+
+header .has-submenu {
+  position: relative;
+}
+
+header .has-submenu > a {
+  padding-right: 0.2rem;
+}
+
+header .has-submenu::after {
+  content: '';
+  display: inline-block;
+  border-top: 0.5rem solid var(--text-color-light);
+  transition: border-top-color 0.2s, transform 0.2s;
+  border-left: 0.35rem solid transparent;
+  border-right: 0.35rem solid transparent;
+}
+header .submenu {
+  position: absolute;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.2s;
+  top: 2rem;
+  left: 0;
+  background-color: var(--background-secondary);
+  min-width: 80px;
+}
+header .submenu li {
+  padding-left: 0rem;
+  width: 100%;
+}
+
+header .submenu a {
+  padding: 1rem;
+  display: block;
+}
+
+header .has-submenu:hover .submenu,
+header .has-submenu:focus-within .submenu {
+  opacity: 1;
+  pointer-events: initial;
+}
+header .has-submenu:hover::after,
+header .has-submenu:focus-within::after {
+  transform: rotateX(180deg);
+  border-top-color: var(--text-color-hover-light);
 }
 
 /*============================================================================*/
