feat: add lore page dynamic content
- correct some styles across the site
- add 404 page

--- a/books/lore/lore.css
+++ b/books/lore/lore.css
@@ -28,13 +28,14 @@
   justify-content: flex-start;
   align-items: center;
 }
-.avatar-container a {
+.avatar-container a,
+.article-container a {
   color: white;
-}
-.avatar-container a:hover,
-.avatar-container a:focus {
-  color: #ccc;
-  text-decoration-color: #ccc;
+  &:hover,
+  &:focus {
+    color: #ccc;
+    text-decoration-color: #ccc;
+  }
 }
 .avatar-container img {
   width: 50px;
