feat: add mailchimp form

--- a/home.css
+++ b/home.css
@@ -47,7 +47,7 @@
   left: 0;
   right: 0;
   padding: 1.2rem;
-  font-size: 1.2rem;
+  font-size: ;
   background-color: var(--overlay-color);
   font-family: var(--font-large);
   border-bottom: 1px solid var(--primary2);
